# uncurl

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: dependency-check.yml  python-publish.yml  python-test.yml
tests/: test_api.py  test_bin.py  test_main.py
uncurl/: __init__.py  api.py  argparser.py  bin.py
uncurlx/: __init__.py  __main__.py  api.py
